--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -66,7 +66,6 @@ body{
   background: #ff5050;
 }
 .navbar {
-  padding-left: 20px;
   padding-top:20px;
   padding-bottom:20px;
   display: flex;
